Improved explanation and debug messages slightly

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <button id="btnShowOrangeDiv">Click this button to add an orange div to the page</button>
+  <p>(I am in "popup.html")</p>  
   <script src="popup.js"></script>
 </body>
 </html>
